// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Team renders Team 1`] = `
<div>
  <div>
    <div
      class="sc-cmTdod ihgxFe"
    >
      <div
        class="sc-jwKygS VBnXh"
      >
        <div
          class="sc-hEsumM eaDJIk"
        >
          <a
            class="sc-ktHwxA jrBUuF"
          >
            <img
              class="sc-cIShpX bdacYz"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-kafWEX gSvfbn"
          >
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Om oss
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Hur vi jobbar
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Teamet
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Våra case
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Jobba hos oss
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Drift & Support
            </a>
            <div
              class="sc-feJyhm eBZxbn"
            />
          </div>
        </div>
        <div
          class="sc-btzYZH bmWjXH"
        >
          <h1
            class="sc-lhVmIH ebGPuj"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-eHgmQL blpFcj"
    >
      <div
        class="sc-jWBwVP hTGZDK"
      >
        <div
          class="sc-dxgOiQ dJEuRm"
        >
          <a
            class="sc-kGXeez bqcmJv"
          >
            <div
              class="sc-jtRfpW dBdsFm"
            >
              <div>
                <img
                  class="sc-kpOJdX iWkgFh"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-bYSBpT jwEohV"
          >
            Cookie M
          </div>
          <div
            class="sc-elJkPf eMquac"
          >
            Cookie master
          </div>
          <div
            class="sc-kTUwUJ kwFQKq"
          >
            <a
              class="sc-kAzzGY beda"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-cSHVUG idRAJo"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-dxgOiQ dJEuRm"
        >
          <a
            class="sc-kGXeez bqcmJv"
          >
            <div
              class="sc-jtRfpW dBdsFm"
            >
              <div>
                <img
                  class="sc-kpOJdX iWkgFh"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-bYSBpT jwEohV"
          >
            Count van Count
          </div>
          <div
            class="sc-elJkPf eMquac"
          >
            1 ahahah
          </div>
          <div
            class="sc-kTUwUJ kwFQKq"
          >
            <a
              class="sc-kAzzGY beda"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-cSHVUG idRAJo"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using keyboard 1`] = `
<div>
  <div>
    <div
      class="sc-cmTdod ihgxFe"
    >
      <div
        class="sc-jwKygS VBnXh"
      >
        <div
          class="sc-hEsumM eaDJIk"
        >
          <a
            class="sc-ktHwxA jrBUuF"
          >
            <img
              class="sc-cIShpX bdacYz"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-kafWEX gSvfbn"
          >
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Om oss
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Hur vi jobbar
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Teamet
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Våra case
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Jobba hos oss
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Drift & Support
            </a>
            <div
              class="sc-feJyhm eBZxbn"
            />
          </div>
        </div>
        <div
          class="sc-btzYZH bmWjXH"
        >
          <h1
            class="sc-lhVmIH ebGPuj"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-eHgmQL blpFcj"
    >
      <div
        class="sc-jWBwVP hTGZDK"
      >
        <div
          class="sc-dxgOiQ dJEuRm"
        >
          <a
            class="sc-kGXeez bqcmJv"
          >
            <div
              class="sc-jtRfpW dBdsFm"
            >
              <div>
                <img
                  class="sc-kpOJdX iWkgFh"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-bYSBpT jwEohV"
          >
            Count van Count
          </div>
          <div
            class="sc-elJkPf eMquac"
          >
            1 ahahah
          </div>
          <div
            class="sc-kTUwUJ kwFQKq"
          >
            <a
              class="sc-kAzzGY beda"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-cSHVUG idRAJo"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using mouse 1`] = `
<div>
  <div>
    <div
      class="sc-cmTdod ihgxFe"
    >
      <div
        class="sc-jwKygS VBnXh"
      >
        <div
          class="sc-hEsumM eaDJIk"
        >
          <a
            class="sc-ktHwxA jrBUuF"
          >
            <img
              class="sc-cIShpX bdacYz"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-kafWEX gSvfbn"
          >
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Om oss
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Hur vi jobbar
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Teamet
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Våra case
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Jobba hos oss
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Drift & Support
            </a>
            <div
              class="sc-feJyhm eBZxbn"
            />
          </div>
        </div>
        <div
          class="sc-btzYZH bmWjXH"
        >
          <h1
            class="sc-lhVmIH ebGPuj"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-eHgmQL blpFcj"
    >
      <div
        class="sc-jWBwVP hTGZDK"
      >
        <div
          class="sc-dxgOiQ dJEuRm"
        >
          <a
            class="sc-kGXeez bqcmJv"
          >
            <div
              class="sc-jtRfpW dBdsFm"
            >
              <div>
                <img
                  class="sc-kpOJdX iWkgFh"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-bYSBpT jwEohV"
          >
            Cookie M
          </div>
          <div
            class="sc-elJkPf eMquac"
          >
            Cookie master
          </div>
          <div
            class="sc-kTUwUJ kwFQKq"
          >
            <a
              class="sc-kAzzGY beda"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-cSHVUG idRAJo"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should not change using keyboard if not enter or space key 1`] = `
<div>
  <div>
    <div
      class="sc-cmTdod ihgxFe"
    >
      <div
        class="sc-jwKygS VBnXh"
      >
        <div
          class="sc-hEsumM eaDJIk"
        >
          <a
            class="sc-ktHwxA jrBUuF"
          >
            <img
              class="sc-cIShpX bdacYz"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-kafWEX gSvfbn"
          >
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Om oss
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Hur vi jobbar
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Teamet
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Våra case
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Jobba hos oss
            </a>
            <a
              class="sc-iELTvK kJsLth"
              aria-current="false"
            >
              Drift & Support
            </a>
            <div
              class="sc-feJyhm eBZxbn"
            />
          </div>
        </div>
        <div
          class="sc-btzYZH bmWjXH"
        >
          <h1
            class="sc-lhVmIH ebGPuj"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-eHgmQL blpFcj"
    >
      <div
        class="sc-jWBwVP hTGZDK"
      >
        <div
          class="sc-dxgOiQ dJEuRm"
        >
          <a
            class="sc-kGXeez bqcmJv"
          >
            <div
              class="sc-jtRfpW dBdsFm"
            >
              <div>
                <img
                  class="sc-kpOJdX iWkgFh"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-bYSBpT jwEohV"
          >
            Cookie M
          </div>
          <div
            class="sc-elJkPf eMquac"
          >
            Cookie master
          </div>
          <div
            class="sc-kTUwUJ kwFQKq"
          >
            <a
              class="sc-kAzzGY beda"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-cSHVUG idRAJo"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-dxgOiQ dJEuRm"
        >
          <a
            class="sc-kGXeez bqcmJv"
          >
            <div
              class="sc-jtRfpW dBdsFm"
            >
              <div>
                <img
                  class="sc-kpOJdX iWkgFh"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-bYSBpT jwEohV"
          >
            Count van Count
          </div>
          <div
            class="sc-elJkPf eMquac"
          >
            1 ahahah
          </div>
          <div
            class="sc-kTUwUJ kwFQKq"
          >
            <a
              class="sc-kAzzGY beda"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-cSHVUG idRAJo"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
